
EXTRA_DIST=black_bg.jpg block_bg.png block_highlight.png color.png		\
           doc_icon.png fig-rand1.png fig-rand10.png fig-rand11.png		\
           fig-rand12.png fig-rand13.png fig-rand14.png fig-rand15.png	\
           fig-rand16.png fig-rand17.png fig-rand18.png fig-rand19.png	\
           fig-rand2.png fig-rand20.png fig-rand21.png fig-rand22.png	\
           fig-rand23.png fig-rand24.png fig-rand25.png fig-rand26.png	\
           fig-rand27.png fig-rand28.png fig-rand29.png fig-rand3.png	\
           fig-rand30.png fig-rand31.png fig-rand4.png fig-rand5.png	\
           fig-rand6.png fig-rand7.png fig-rand8.png fig-rand9.png		\
           folder_icon.png head.html home_off.png home_on.png			\
           images_icon.png indicator_block.png line_dir.html			\
           line_movie.html line_music.html line_photo.html				\
           line_playlist.html music_icon.png next_off.png next_on.png	\
           prev_off.png prev_on.png tail.html transparent.png			\
           video_icon.png



