SUBDIRS=clt720img
EXTRA_DIST= aqua_bg.jpg block_bg.png block_highlight.png				\
    doc_icon_text.png folder_icon_text.png head.html home_off.png		\
    home_on.png images_icon_text.png indicator_block.png line_dir.html	\
    line_movie.html line_music.html line_playlist.html					\
    music_icon_text.png next_off.png next_on.png prev_off.png			\
    prev_on.png tail.html transparent.png video_icon_text.png			\
    line_photo.html logo-aquarius.png logo-aries.png logo-cancer.png	\
    logo-capricorn.png logo-gemini.png logo-leo.png logo-libra.png		\
    logo-pisces.png logo-sagittarius.png logo-scorpio.png				\
    logo-taurus.png logo-virgo.png sign-aquarius.png sign-aries.png		\
    sign-cancer.png sign-capricorn.png sign-gemini.png sign-leo.png		\
    sign-libra.png sign-pisces.png sign-sagittarius.png					\
    sign-scorpio.png sign-taurus.png sign-virgo.png color.png			\
    menu.html menu_dir.html menu_test.html popup.png					\
    doc_icon_visited.png folder_icon_visited.png						\
    images_icon_visited.png music_icon_visited.png						\
    video_icon_visited.png line_last.html menu_movie.html menu_music.html \
    menu_photo.html menu_playlist.html