EXTRA_DIST=divider.png doc_icon.png doc_icon_text.png doc_icon_visited.png folder_icon.png folder_icon_text.png folder_icon_visited.png images_icon.png images_icon_text.png images_icon_visited.png list_bar.png list_bar_focused.png movie-music.png music_icon.png music_icon_text.png music_icon_visited.png my-bg.png popup.png transparent-1x1.png transparent.png video_icon.png video_icon_text.png video_icon_visited.png