
EXTRA_DIST=back.jpg blue.gif bookmark.gif dir.gif document.gif green.gif \
           head.html image.gif index.html line_bin.html line_playlist.html\
           line_dir.html line_movie.html line_music.html line_unknown.html \
           movie.gif music.gif backee4.jpg list_bar.png red.gif tail.html \
           unknown.gif yellow.gif line_photo.html
